--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,15 +1,17 @@
 <div class="footer">
     <div class="footer-item">
-        <h3>Contact Us</h3>
-        <p>Email: contactxample.com</p>
+        <h3>Contact Me</h3>
+        <p>miguel.seca@gmail.com</p>
         <p>Phone: (123) 456-7890</p>
     </div>
     <div class="footer-item">
-        <h3>About Us</h3>
+        <h3>About Me</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </div>
     <div class="footer-item">
-        <p>&copy; 2023 Your Company Name</p>
+        <p>&copy; 2023 Made with love by Miguel Seca</p>
+
+        <p>*No pokemon was harm while doing this website*</p>
     </div>
 </div>
 
