--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,2 +1,10 @@
 
-
+.app-body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+  
+app-footer {
+    margin-top: auto;
+}
