--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -18,5 +18,13 @@
 
 .link {
     margin-left: 15px;
-
+    text-transform: uppercase;
+    cursor:pointer;
 }
+
+
+.link-active {
+    text-decoration: underline;
+    background-color: antiquewhite;
+  }
+  
