--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,15 +4,18 @@
   </div>
 
   <div class="links">
-  <a class="link" routerLink="/poke-list" routerLinkActive="menu-item-active">
-   <span>Pokedex</span>
- </a>
+   <a class="link" routerLink="" routerLinkActive="link-active">
+      <span>PokeFIGHT!</span>
+    </a>
+    <a class="link" routerLink="/poke-list" routerLinkActive="link-active">
+      <span>Pokedex</span>
+    </a>
 
- <a class="link" routerLink="/poke-list" routerLinkActive="menu-item-active">
+ <a class="link" routerLink="/poke-detail" routerLinkActive="link-active">
    <span>Items</span>
  </a>
 
- <a class="link" routerLink="/poke-list" routerLinkActive="menu-item-active">
+ <a class="link" routerLink="/poke-list" routerLinkActive="link-active">
    <span>Berries</span>
  </a>
 </div>
